Fix tab title not centered, fixes #65

--- a/theme/colors/dark.css
+++ b/theme/colors/dark.css
@@ -92,7 +92,7 @@
 		--sweet-tabbar-tab-active-background: #161925;
 		--sweet-tabbar-tab-active-border-bottom-color: #C50ED2;
 		--sweet-tabbar-tab-active-color: #C3C7D1;
-		--sweet-tabbar-tab-active-hover-background: #0C0E14;
+		--sweet-tabbar-tab-active-hover-background: #1F2333;
 		--sweet-inactive-tabbar-tab-color: rgb(141, 144, 145);
 		--sweet-inactive-tabbar-tab-active-background: #0C0E14;
 		--sweet-inactive-tabbar-tab-active-border-bottom-color: #C50ED2;
